bk_ida/gccida/g0/ix86_expand_move
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/ix86_expand_move/src/i386.c:7235:25: error: must use 'enum' tag to refer to type 'machine_mode'
void  ix86_expand_move( machine_mode mode, rtx *operands) 
                        ^
                        enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/ix86_expand_move/src/i386.c:7239:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v4; // ecx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/ix86_expand_move/src/i386.c:7240:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v5; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/ix86_expand_move/src/i386.c:7254:49: error: use of undeclared identifier 'machine_mode'
v3 != mode || !symbolic_operand( operands[1], ( machine_mode)operands)) ) 
                                                ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/ix86_expand_move/src/i386.c:7262:83: error: use of undeclared identifier 'machine_mode'
if ( push_operand( *operandsa, mode) && !general_no_elim_operand( operandsa[1], ( machine_mode)operandsa) ) 
                                                                                  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/ix86_expand_move/src/i386.c:7275:8: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( ( mode_class_0[mode] == MODE_FLOAT 
       ^~~~~~~~~~~~
       mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/ix86_expand_move/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/ix86_expand_move/src/i386.c:7276:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
|| mode_class_0[mode] == MODE_COMPLEX_FLOAT 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/ix86_expand_move/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/ix86_expand_move/src/i386.c:7277:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
|| mode_class_0[mode] == MODE_VECTOR_FLOAT) 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/ix86_expand_move/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
8 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/ix86_expand_move/src/obj/i386.o] Error 1
